# Jack-Sparrow

./: CMakeLists.txt  README.md  package-lock.json  package.json
include/: .clang-format  camera.h  shader.h
ocean/: index.html  main.js  package-lock.json  package.json
public/: index.html  main.js
src/: main.cpp
vite-project/: NOTE.md  index.html  main.js  package-lock.json  package.json
